# purple

./: Maker.lhs  default.nix  mkrfuzz.cabal  project.nix  shell.nix
scripts/: run
src/: Maker.lhs
src-bin/: Main.hs
src/Maker/: Decimal.lhs  Prelude.lhs
