name:
  mkrfuzz
version:
  1.0.0
cabal-version:
  >= 1.18
license:
  GPL-3
build-type:
  Simple

library
  hs-source-dirs: src
  exposed-modules:
    Maker,
    Maker.Prelude,
    Maker.Decimal
  build-depends:
    aeson,
    base < 5,
    containers,
    lens,
    mtl
  default-language:
    Haskell2010

executable dai
  hs-source-dirs: src-bin
  default-language:
    Haskell2010
  build-depends:
    base < 5,
    bytestring,
    mkrfuzz,
    optparse-generic
  main-is:
    Main.hs
